--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "eslint": "^8.36.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
